# dev-frame-opencode

./: .gitignore  AGENTS.codex-draft.md  AGENTS.md  CLAUDE.md  CURRENT_ROUTE.json  DECISION_LEDGER.jsonl  EVIDENCE_PACK_A1.md  EVIDENCE_PACK_A3.md  EVIDENCE_PACK_BINDCHROME_CLEANUP.md  EVIDENCE_PACK_VALIDATION_A1.md  FAILURE_MODE_MATRIX.md  FAILURE_RESPONSE_RUNBOOK.md  FINAL_CHECKPOINT.json  HANDOFF.md  HEALTH_REPORT.md  HUMAN_OVERRIDE_PROTOCOL.md  MONITORING_PLAN.md  PRODUCTION_PROMOTION_CRITERIA.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_GAPS.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_RISK_MATRIX.md  PROJECT_STATE.md  README.md  RELEASE_CRITERIA.md  ROLLBACK_PLAN.md  RUNBOOK.md  TRANSITION_LOG.jsonl  TRI_REPO_CHECKPOINT.json  project.md  readiness_heatmap.md  readiness_score.json  smoke_report.txt  smoke_test.py  validation_output.txt
ai-workflow-hub-e2e/: .aiworkflow.yaml  .env.template  .gitignore  ARCHITECTURE.md  INTEGRATION_PLAN.md  PIPELINE.md  QUALITY_CHECKLIST.md  README.md  config_loader.py  jest.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt
ai-workflow-hub-e2e/.gsd/: PREFERENCES.md
ai-workflow-hub-e2e/aggregator/: collector.py  preflight.py
ai-workflow-hub-e2e/attribution/: engine.py
ai-workflow-hub-e2e/cli/: main.py
ai-workflow-hub-e2e/config/: accounts.yaml  defaults.yaml  devices.yaml  gates.yaml
ai-workflow-hub-e2e/demo/: mock_server.py  run_demo.py  test_api.py
ai-workflow-hub-e2e/docs/: fittrack-test-plan.md
ai-workflow-hub-e2e/evidence/: collector.py  (+2 more)
(+548 files in other folders)
